--- a/libs/index.html
+++ b/libs/index.html
@@ -6,6 +6,6 @@
     <meta http-equiv="refresh" content="0;URL='https://github.com/CE-Programming/libraries/releases/latest'" />
   </head>
   <body>
-    <h1><a href="https://github.com/CE-Programming/libraries/releases/latest">TI-84 Plus CE / TI-83 Premium CE Common Libraries for native programs - Latest release</a></h1>
+    <i>Redirecting you to: <a href="https://github.com/CE-Programming/libraries/releases/latest">TI-84 Plus CE / TI-83 Premium CE Common Libraries for native programs - Latest release</a></i>
   </body>
 </html>
