--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>TI-84 Plus CE / TI-83 Premium CE native programming</title>
+    <meta http-equiv="refresh" content="0;URL='https://github.com/CE-Programming/'" />
+  </head>
+  <body>
+    <i>Redirecting you to: <a href="https://github.com/CE-Programming/">TI-84 Plus CE / TI-83 Premium CE native programming</a></i>
+  </body>
+</html>
